<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Asteroides</string>
    <string name="Arrancar">Jugar</string>
    <string name="Configurar">Configurar</string>
    <string name="AcercaDe">Acerca de</string>
    <string name="Salir">Salir</string>
    <string name="menu_settings">Menu settings</string>
    <color name="ColorFondoTablet">#80FF0000</color>
    <string name="NombreApp">Asteroides</string>

</resources>